syntax = "proto3";

package inetmock.rpc.v1;

option csharp_namespace = "INetMock.Client.Rpc";
option go_package = "gitlab.com/inetmock/inetmock/pkg/rpc";
option java_multiple_files = true;
option java_outer_classname = "HealthProto";
option java_package = "com.github.baez90.inetmock.rpc";

enum HealthState {
  HEALTH_STATE_UNSPECIFIED = 0;
  HEALTH_STATE_INITIALIZING = 1;
  HEALTH_STATE_UNHEALTHY = 2;
  HEALTH_STATE_HEALTHY = 3;
}

message GetHealthRequest {
  repeated string components = 1;
}

message ComponentHealth {
  HealthState state = 1;
  string message = 2;
}

message GetHealthResponse {
  HealthState overall_health_state = 1;
  map<string, ComponentHealth> components_health = 2;
}

service HealthService {
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse);
}
